pp-1.6.4:
    1) Start ppworker using -m
    2) Fixed windows compatibility issue.

pp-1.6.3:
    1) Added -P pid_file command line argument to ppserver.py
    2) Modified print_stats() to output the number of active tasks.
    3) Added SIGUSR1 handler to ppserver.py to print stats when signal is received.

pp-1.6.2:
    1) Made socket timeout configurable via constructor argument socket_timeout and command line argument of ppserver.py -k.
    2) Fixed sresult referenced before assignment bug
    3) Removed shell from subprocess.Popen call.
    4) Fixed race condition in autodiscovery.

pp-1.6.1:
    1) Fixed struct.unpack("!Q", size_packed) bug which started to happen with Python 2.7 on certain platforms.
    2) Fixed bug with auto-discovery not working after ppserver is restarted.
    3) Added full support of python import statements. 
       For instance "from numpy.linalg import det as determinant" is now supported.
       For compatibility old module name imports will continue to work.
    4) Exposed more detailed network error messages in ppserver.py.

pp-1.6.0:
    1) Changed logging mechanism. Now logger is obtained as logging.getLogger('pp').
    2) Modified ppworker to use exec instead of eval.
    3) Modified exception handling on destruction. Now if server was destroyed,
       uncompleted jobs throw DestroyedServerError exception on call.
    4) Fixed issue with submitting a method of an instance of a class inherited from another.
    5) Added timeouts to all socket operations.
    6) Changed default proto type to 2.
    7) Moved from thread module to threading. Made all pp threads daemons.
    8 ) Refactored ppserver.py to improve testability
    9) Fixed bug with ppsecret in user module
Changes w.r.t RC1:
    10) Fixed issue with argument which is an instance of an imported class
Changes w.r.t RC2:
    11) Fixed DEBUG logging in ppserver.
    12) Added a flag (-f) to ppserver to set a custom log format. Changed default log format.