@@ -1,3 +1,13 @@
+### VERSION 1.6.6.1 ###
+# see MODS*.diff for full patch (against 1.6.6)
+# made these functional changes
+ - updated 1.6.4 to 1.6.6
+ - ...TBD...
+
+# made these "build" changes
+ - edited pp*py to have version = '1.6.6.1'
+ - ...TBD...
+
 ### VERSION 1.6.4.9 ###
 # see MODS*.diff for full patch (against 1.6.4)
 # made these functional changes
@@ -6,8 +16,6 @@
 # made these "build" changes
  - edited pp*py to have version = '1.6.4.9'
  - ...TBD...
-
-
 
 ### VERSION 1.6.4.8 ###
 # see MODS*.diff for full patch (against 1.6.4)
